Initialize CatQuest web app layout and content
Added structure and content for the CatQuest web app, including game rules and HUD elements.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-<html><body>CatQuest Web App</body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>🐱 Cat Quest: French Legends</title>
+  assets/style.css
+</head>
+<body>
+  <header>
+    <h1>🐱 Cat Quest: French Legends</h1>
+    <p>Level up your French: présent → futur proche → passé récent → passé composé</p>
+  </header>
+
+  <main>
+    <section id="hud">
+      <div>Level: <span id="level">1</span></div>
+      <div>Streak: <span id="streak">0</span></div>
+      <div>Score: <span id="score">0</span>%</div>
+      <div>Badge: <span id="badge">—</span></div>
+    </section>
+
+    <section id="game">
+      <div id="prompt">Press Start to begin.</div>
+      <input id="answer" type="text" placeholder="Type your answer here"/>
+      <div class="buttons">
+        <button id="start">Start</button>
+        <button id="check">Check</button>
+        <button id="next">Next</button>
+      </div>
+      <div id="feedback"></div>
+    </section>
+
+    <section id="rules">
+      <h2>How it works</h2>
+      <ul>
+        <li>Short rounds (10 items). Get <strong>≥90%</strong> to unlock the next level.</li>
+        <li>Correct answers build your <strong>streak</strong> and unlock badges.</li>
+        <li>Levels: 1) Present basics → 2) Core five present → 3) Near future & near past → 4) Passé composé → 5) Unit 1C Boss.</li>
+      </ul>
+    </section>
+  </main>
+
+  <!-- Use defer so it runs after HTML is parsed -->
+  <script defer src="  <script defer src="pt>
+</body>
